backing up to table with facts

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2459,7 +2459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "soup = BeautifulSoup(facts.content, 'lxml')"
+    "soup = BeautifulSoup(facts.content, 'html')"
    ]
   },
   {
@@ -2487,7 +2487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2501,7 +2501,7 @@
     "    url=\"https://space-facts.com/mars/\"\n",
     "    browser.visit(url)\n",
     "    facts = requests.get(url)\n",
-    "    soup = BeautifulSoup(facts.content, 'lxml')\n",
+    "    soup = BeautifulSoup(facts.content, 'html')\n",
     "    table = soup.find_all('table')[0] \n",
     "    df = pd.read_html(str(table))\n",
     "    mars_facts=df[0].to_json(orient='records')\n",
@@ -2511,7 +2511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2520,7 +2520,7 @@
        "'[{\"0\":\"Equatorial Diameter:\",\"1\":\"6,792 km\"},{\"0\":\"Polar Diameter:\",\"1\":\"6,752 km\"},{\"0\":\"Mass:\",\"1\":\"6.39 \\\\u00d7 10^23 kg (0.11 Earths)\"},{\"0\":\"Moons:\",\"1\":\"2 (Phobos & Deimos)\"},{\"0\":\"Orbit Distance:\",\"1\":\"227,943,824 km (1.38 AU)\"},{\"0\":\"Orbit Period:\",\"1\":\"687 days (1.9 years)\"},{\"0\":\"Surface Temperature:\",\"1\":\"-87 to -5 \\\\u00b0C\"},{\"0\":\"First Record:\",\"1\":\"2nd millennium BC\"},{\"0\":\"Recorded By:\",\"1\":\"Egyptian astronomers\"}]'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
